# euclid_person_follower

./: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
cfg/: person_follower.cfg
launch/: realsense_person_follower.launch
src/: follower_nodelet.cpp  follower_nodelet.h
