<?xml version="1.0"?>
<package>
  <name>realsense_person_follower</name>
  <version>1.0.0</version>
  <description>Intel(r) RealSense(tm) Technology sample code showing how to follow a person</description>

  <maintainer email="euclid.support@intel.com">Intel Euclid Support</maintainer>

  <license>BSD 3-clause. See license attached</license>

  <url type="website">http://www.intel.com/realsense</url>

  <author email="sarang.borude@intel.com">Sarang Borude</author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
   
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend> 
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>

  <run_depend>geometry_msgs</run_depend>

  <export>
  	<nodelet plugin="${prefix}/nodelet_plugins.xml" /> 
  </export>
</package>
